--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ div.item {
 }
 
 .logo {
-    width: 270px;
-    height: 120px;
+    width: 1920px
+    height: 400px;
     pointer-events: none;
 }
 
